# mmt_dipole_cuboid_inversion

./: .gitignore  .gitmodules  CITATION.cff  Example.ipynb  README.md  build.py  build_extension.py  pyproject.toml  setup.py
.github/workflows/: manual-build-and-publish.yml  manual-test.yml
Example_data/: class_QDM_result2.txt  class_cuboid_result2.txt  grain_mag.txt
chest/: make_diagram.sh  packages_HTML.dot
chest/sandbox/: build.py  pyproject.toml
chest/tutorial_qdm_data/: grain_mag.txt  tutorial_scan_params.json
dipole_inverse/: __init__.py  dipole_inverse.py  inversion_tools.py  plot.py  plot_tools.py
dipole_inverse/cython_cuda_lib/: pop_matrix_cuda_lib.c  pop_matrix_cuda_lib.cu  pop_matrix_cuda_lib.h  pop_matrix_cudalib.cpp  pop_matrix_cudalib.pyx
dipole_inverse/cython_lib/: pop_matrix_C_lib.c  pop_matrix_C_lib.h  pop_matrix_lib.c  pop_matrix_lib.pyx
doc/: conf.py  index.rst  installation.rst  requirements.txt
doc/source/: dipole_inverse.rst  modules.rst
doc/tutorial/: cuboid_decomposition.ipynb  synthetic_sample_analysis.ipynb  synthetic_sample_analysis.py  tutorial.ipynb  tutorial.py
grain_geometry_tools/: __init__.py  grain_geometry_tools.py
grain_topology/: __init__.py  grain_topology.py
mmt_dipole_cuboid_inversion/: __about__.py  dipole_cuboid_inversion.py
mmt_dipole_cuboid_inversion/cython_cuda_lib/: pop_matrix_cuda_lib.cu
mmt_dipole_cuboid_inversion/cython_lib/: pop_matrix_C_lib.c  pop_matrix_lib.pyx
mmt_dipole_inverse/: __init__.py  dipole_inverse.py  numba_lib.py
mmt_dipole_inverse/cython_cuda_lib/: pop_matrix_cuda_lib.cu  pop_matrix_cudalib.pyx
mmt_dipole_inverse/cython_lib/: pop_matrix_C_lib.c  pop_matrix_C_lib.h  pop_matrix_lib.pyx
mmt_dipole_inverse/tools/: __init__.py  cuboid_decompose.py  plot.py
mmt_dipole_inverse_tools/: __init__.py
test/: Example.ipynb  example_test.py  generate_artificial_sample.py  generate_single_dipole.py  grain_voxel_data.txt  test_QDM_area.py  test_artificial_sample.ipynb  test_cuboid_decomposition.py  test_cython_vs_cuda_vs_numba_magnetization.py  test_cython_vs_numba_vs_cuda_populateG.py  test_single_dipole.py  test_single_dipole_vs_depth.ipynb  test_three_cuboids.py  tutorial.ipynb
test/test_three_cub_data/: bz_cuboids_three-particles.npy  cuboids.txt
