[tool.poetry]
name = "dipole_inverse"
version = "1.9"
description = "Python lib to calculate dipole magnetization"
authors = ["F. Out, D. Cortes, M. Kosters, K. Fabian, L. V. de Groot <f.out@students.uu.nl>"]
license = "BSD-2-Clause"
readme = "README.md"
build = 'build.py'

# 05/01/21: latest numba, 0.55, only accepts numpy < 1.22
[tool.poetry.dependencies]
python = "^3.8"
numpy = "<1.22"
numba = ">=0.52"
scipy = ">=1.6"
descartes = ">=1.0"
pathlib = ">=1.0"
shapely = ">=1.7"
# The following is a dependency in a private repository:
grain_geometry_tools = { git = "ssh://git@github.com/Micromagnetic-Tomography/grain_geometry_tools.git", branch = "master" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
