# See: https://github.com/python-poetry/poetry/issues/2740
# for the current status of the build.py file in Poetry
[tool.poetry]
name = "mmt_dipole_inverse"
version = "2.0a"
description = "Python lib to calculate dipole magnetization"
authors = ["F. Out <f.out@students.uu.nl>", "D. Cortés-Ortuño", "M. Kosters", "K. Fabian", "L. V. de Groot"]
license = "MIT"
readme = "README.md"
# build = "build.py"


packages = [
    {include = "mmt_dipole_inverse"},
    {include = "mmt_dipole_inverse_config.py"},
]

include = [
    # C/CUDA extensions must be included in the wheel distributions
    {path = "mmt_dipole_inverse/cython_lib/*.so", format = "wheel"},
    {path = "mmt_dipole_inverse/cython_lib/*.pyd", format = "wheel"},
    {path = "mmt_dipole_inverse/cython_cuda_lib/*.so", format = "wheel"},
    {path = "mmt_dipole_inverse/cython_cuda_lib/*.pyd", format = "wheel"},
]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
cython = ">=0.29.26"
python = ">=3.8,<3.10"
numpy = "^1.21"
numba = ">=0.55.2"
scipy = ">=1.7"
descartes = ">=1.0"
pathlib = ">=1.0"
shapely = ">=1.7"
# The following is a dependency in a private repository. 
# These are not currently working with poetry
# grain-geometry-tools = {path = "../grain_geometry_tools"}
# grain-geometry-tools = { git = "ssh://git@github.com/Micromagnetic-Tomography/grain_geometry_tools.git", branch = "master" }

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
jupyterlab = ">=3.4.5"

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "setuptools"]
build-backend = "poetry.core.masonry.api"
